force-app/main/default/objects/Foyer_paneliste__c/Foyer_paneliste__c.object-meta.xml
<CustomObject>
    <label>Foyer panéliste</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Numéro du Foyer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foyers panélistes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>