force-app/main/default/objects/Foyer_paneliste__c/fields/A_anonymiser__c.field-meta.xml
<CustomField>
    <fullName>A_anonymiser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A anonymiser</label>
    <type>Checkbox</type>
</CustomField>