force-app/main/default/objects/Foyer_paneliste__c/fields/ACC_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>ACC_EXTId_SIPanel__c</fullName>
    <description>(GID) c&apos;est l&apos;id salesforce de l&apos;enregistrement Foyer Parent
Ce champ sert a identifier l&apos;enregistrement Foyer parent du foyer Paneliste</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ACC_EXTId_SIPanel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>