force-app/main/default/objects/Foyer_paneliste__c/fields/Controle_a_faire__c.field-meta.xml
<CustomField>
    <fullName>Controle_a_faire__c</fullName>
    <formula>IF( Nombre_de_controle__c &gt; 0, IMAGE(&quot;/resource/controle_oui&quot;, &quot;Oui&quot;,30,30),
IMAGE(&quot;/resource/controle_non&quot;, &quot;Non&quot;,30,30))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrôle à faire</label>
    <type>Text</type>
</CustomField>