force-app/main/default/objects/Foyer_paneliste__c/fields/Convention_a_jour__c.field-meta.xml
<CustomField>
    <fullName>Convention_a_jour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convention à jour</label>
    <type>Checkbox</type>
</CustomField>