force-app/main/default/objects/Foyer_paneliste__c/fields/Date_d_installation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_installation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;installation</label>
    <type>Date</type>
</CustomField>