force-app/main/default/objects/Foyer_paneliste__c/fields/Date_d_integration__c.field-meta.xml
<CustomField>
    <fullName>Date_d_integration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;intégration</label>
    <type>Date</type>
</CustomField>