force-app/main/default/objects/Foyer_paneliste__c/fields/Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>