force-app/main/default/objects/Foyer_paneliste__c/fields/Date_de_debut_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut_d_intervention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de début d&apos;intervention</label>
    <type>Date</type>
</CustomField>