force-app/main/default/objects/Foyer_paneliste__c/fields/Date_de_premiere_collecte__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_collecte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de première collecte</label>
    <type>Date</type>
</CustomField>