force-app/main/default/objects/Foyer_paneliste__c/fields/Date_de_signature_de_la_convention__c.field-meta.xml
<CustomField>
    <fullName>Date_de_signature_de_la_convention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de signature de la convention</label>
    <type>Date</type>
</CustomField>