force-app/main/default/objects/Foyer_paneliste__c/fields/Date_de_visite_de_courtoisie__c.field-meta.xml
<CustomField>
    <fullName>Date_de_visite_de_courtoisie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de visite de courtoisie</label>
    <type>Date</type>
</CustomField>