force-app/main/default/objects/Foyer_paneliste__c/fields/Date_dernier_changement__c.field-meta.xml
<CustomField>
    <fullName>Date_dernier_changement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date dernier changement</label>
    <type>Date</type>
</CustomField>