force-app/main/default/objects/Foyer_paneliste__c/fields/Date_du_dernier_appel__c.field-meta.xml
<CustomField>
    <fullName>Date_du_dernier_appel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date du dernier appel</label>
    <type>Date</type>
</CustomField>