force-app/main/default/objects/Foyer_paneliste__c/fields/Date_du_dernier_changement_audimetrique__c.field-meta.xml
<CustomField>
    <fullName>Date_du_dernier_changement_audimetrique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date du dernier changement audimétrique</label>
    <type>Date</type>
</CustomField>