force-app/main/default/objects/Foyer_paneliste__c/fields/Date_du_foyer_pilote__c.field-meta.xml
<CustomField>
    <fullName>Date_du_foyer_pilote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date du foyer pilote</label>
    <type>Date</type>
</CustomField>