force-app/main/default/objects/Foyer_paneliste__c/fields/Demande_d_anonymisation__c.field-meta.xml
<CustomField>
    <fullName>Demande_d_anonymisation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande d&apos;anonymisation</label>
    <type>Checkbox</type>
</CustomField>