force-app/main/default/objects/Foyer_paneliste__c/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Panelistes</relationshipName>
    <type>Lookup</type>
</CustomField>