force-app/main/default/objects/Foyer_paneliste__c/fields/Equipement_set_meter__c.field-meta.xml
<CustomField>
    <fullName>Equipement_set_meter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipement set meter</label>
    <type>Checkbox</type>
</CustomField>