force-app/main/default/objects/Foyer_paneliste__c/fields/Foyer_equipe__c.field-meta.xml
<CustomField>
    <fullName>Foyer_equipe__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Foyer équipé</label>
    <type>Checkbox</type>
</CustomField>