force-app/main/default/objects/Foyer_paneliste__c/fields/Foyer_Paneliste_ExtId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>Foyer_Paneliste_ExtId_SIPanel__c</fullName>
    <description>&quot;(UID) c&apos;est l&apos;id unique generé par SIPANEL du foyer panéliste 
Ce champ sert a faire l&apos;Upsert du foyer panéliste&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Foyer_Paneliste_ExtId_SIPanel</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>