force-app/main/default/objects/Foyer_paneliste__c/fields/Foyer_Pilote__c.field-meta.xml
<CustomField>
    <fullName>Foyer_Pilote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foyer Pilote</label>
    <type>Checkbox</type>
</CustomField>