force-app/main/default/objects/Foyer_paneliste__c/fields/Identifiant_foyer_pame__c.field-meta.xml
<CustomField>
    <fullName>Identifiant_foyer_pame__c</fullName>
    <label>Identifiant foyer PAME/Google</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>