force-app/main/default/objects/Foyer_paneliste__c/fields/Intervention_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Intervention_en_cours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intervention en cours</label>
    <type>Checkbox</type>
</CustomField>