force-app/main/default/objects/Foyer_paneliste__c/fields/Lettre_operateur__c.field-meta.xml
<CustomField>
    <fullName>Lettre_operateur__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lettre opérateur</label>
    <length>20</length>
    <type>Text</type>
</CustomField>