force-app/main/default/objects/Foyer_paneliste__c/fields/Libelle_profession__c.field-meta.xml
<CustomField>
    <fullName>Libelle_profession__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Libellé profession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>