force-app/main/default/objects/Foyer_paneliste__c/fields/Maj_des_coordonnees__c.field-meta.xml
<CustomField>
    <fullName>Maj_des_coordonnees__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Màj des coordonnées</label>
    <type>Date</type>
</CustomField>