force-app/main/default/objects/Foyer_paneliste__c/fields/Membre_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Membre_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membre du foyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Panelistes</relationshipName>
    <type>Lookup</type>
</CustomField>