force-app/main/default/objects/Foyer_paneliste__c/fields/Message_en_cas_d_erreur__c.field-meta.xml
<CustomField>
    <fullName>Message_en_cas_d_erreur__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Message en cas d&apos;erreur</label>
    <length>180</length>
    <type>Text</type>
</CustomField>