force-app/main/default/objects/Foyer_paneliste__c/fields/Mettre_a_jour_le_statut__c.field-meta.xml
<CustomField>
    <fullName>Mettre_a_jour_le_statut__c</fullName>
    <defaultValue>$Label.PAN_mettre_a_jour_le_statut</defaultValue>
    <description>Faire basculer le(s) foyer(s) selectionné(s) vers chute définitive</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mettre à jour le statut</label>
    <length>200</length>
    <type>Text</type>
</CustomField>