force-app/main/default/objects/Foyer_paneliste__c/fields/Motif_de_chute__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_chute__c</fullName>
    <label>Motif de chute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Contrainte du casque (filaire ou bluetooth)</fullName>
            </value>
            <value>
                <fullName>Déménagement hors zone de mesure</fullName>
            </value>
            <value>
                <fullName>Etude trop longue</fullName>
            </value>
            <value>
                <fullName>Mauvaise participation</fullName>
            </value>
            <value>
                <fullName>Ondes</fullName>
            </value>
            <value>
                <fullName>Oubli trop régulier</fullName>
            </value>
            <value>
                <fullName>Pager trop gros, inesthétique, indiscret...</fullName>
            </value>
            <value>
                <fullName>Pas de motif précisé</fullName>
            </value>
            <value>
                <fullName>Profession inadaptée</fullName>
            </value>
            <value>
                <fullName>Programme de fid peu motivant</fullName>
            </value>
            <value>
                <fullName>Raisons personnelles</fullName>
            </value>
            <value>
                <fullName>Set meter : problèmes techniques</fullName>
            </value>
            <value>
                <fullName>Set meter : refus installation</fullName>
            </value>
            <value>
                <fullName>Set meter : utilisation trop contraignante</fullName>
            </value>
            <value>
                <fullName>Structure du panel</fullName>
            </value>
            <value>
                <fullName>Sursollicitation</fullName>
            </value>
            <value>
                <fullName>Trop contraignant port et chargement</fullName>
            </value>
            <value>
                <fullName>Trop contraignant sans précision</fullName>
            </value>
            <value>
                <fullName>Trop contraignant à charger</fullName>
            </value>
            <value>
                <fullName>Trop contraignant à porter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>