force-app/main/default/objects/Foyer_paneliste__c/fields/Motif_de_suspension__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_suspension__c</fullName>
    <label>Motif de suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>202</fullName>
                <label>Mauvaise audience</label>
            </value>
            <value>
                <fullName>41</fullName>
                <label>Chute</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Déménagement / travaux en cours</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>En attente matériel MM</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Pilote</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>TV non relié à l’audimètre</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>Audience différée sans equipement</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Autre audience incorrecte (hors bagotement / autre usage anormal)</label>
            </value>
            <value>
                <fullName>89</fullName>
                <label>Autre usage anormal, dont bagotement</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Chgt / Inst TV / TV temporaire non installé</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Chgt / Inst décodeur num</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>KO DTV audience hors norme (impactant les résultats)</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>KO DTV pour investigation</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>En attente de chute</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Audience incohérente</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>En attente matériel</label>
            </value>
            <value>
                <fullName>Autre</fullName>
                <isActive>false</isActive>
                <label>Autre</label>
            </value>
            <value>
                <fullName>Contrainte du casque (filaire ou bluetooth)</fullName>
                <isActive>false</isActive>
                <label>Contrainte du casque (filaire ou bluetooth)</label>
            </value>
            <value>
                <fullName>Déménagement hors zone de mesure</fullName>
                <isActive>false</isActive>
                <label>Déménagement hors zone de mesure</label>
            </value>
            <value>
                <fullName>Etude trop longue</fullName>
                <isActive>false</isActive>
                <label>Etude trop longue</label>
            </value>
            <value>
                <fullName>Mauvaise participation</fullName>
                <isActive>false</isActive>
                <label>Mauvaise participation</label>
            </value>
            <value>
                <fullName>Ondes</fullName>
                <isActive>false</isActive>
                <label>Ondes</label>
            </value>
            <value>
                <fullName>Oubli trop régulier</fullName>
                <isActive>false</isActive>
                <label>Oubli trop régulier</label>
            </value>
            <value>
                <fullName>Pager trop gros, inesthétique, indiscret...</fullName>
                <isActive>false</isActive>
                <label>Pager trop gros, inesthétique, indiscret...</label>
            </value>
            <value>
                <fullName>Pas de motif précisé</fullName>
                <isActive>false</isActive>
                <label>Pas de motif précisé</label>
            </value>
            <value>
                <fullName>Profession inadaptée</fullName>
                <isActive>false</isActive>
                <label>Profession inadaptée</label>
            </value>
            <value>
                <fullName>Programme de fid peu motivant</fullName>
                <isActive>false</isActive>
                <label>Programme de fid peu motivant</label>
            </value>
            <value>
                <fullName>Raisons personnelles</fullName>
                <isActive>false</isActive>
                <label>Raisons personnelles</label>
            </value>
            <value>
                <fullName>Set meter : problèmes techniques</fullName>
                <isActive>false</isActive>
                <label>Set meter : problèmes techniques</label>
            </value>
            <value>
                <fullName>Set meter : refus installation</fullName>
                <isActive>false</isActive>
                <label>Set meter : refus installation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>