force-app/main/default/objects/Foyer_paneliste__c/fields/Nb_mois_apres_collection__c.field-meta.xml
<CustomField>
    <fullName>Nb_mois_apres_collection__c</fullName>
    <formula>IF(RecordType.Name = $Label.PAN_recordType_mediamatpame, (YEAR(TODAY()) - YEAR(Date_d_installation__c)) * 12+ (MONTH(TODAY()) - MONTH(Date_d_installation__c))- IF(DAY(TODAY()) - DAY(Date_d_installation__c) &lt; 0, 1, 0)
, (YEAR(TODAY()) - YEAR(Date_de_premiere_collecte__c)) * 12+ (MONTH(TODAY()) - MONTH(Date_de_premiere_collecte__c))
- IF(DAY(TODAY()) - DAY(Date_de_premiere_collecte__c) &lt; 0, 1, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nb mois apres collection</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>