force-app/main/default/objects/Foyer_paneliste__c/fields/Nom_pilote__c.field-meta.xml
<CustomField>
    <fullName>Nom_pilote__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nom pilote</label>
    <length>25</length>
    <type>Text</type>
</CustomField>