force-app/main/default/objects/Foyer_paneliste__c/fields/Nombre_de_beacons__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_beacons__c</fullName>
    <label>Nombre de beacons</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>