force-app/main/default/objects/Foyer_paneliste__c/fields/Nombre_de_controle__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_controle__c</fullName>
    <label>Nombre de contrôle</label>
    <summaryFilterItems>
        <field>Controle__c.Statut__c</field>
        <operation>equals</operation>
        <value>Actif, En cours</value>
    </summaryFilterItems>
    <summaryForeignKey>Controle__c.Foyer_paneliste__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>