force-app/main/default/objects/Foyer_paneliste__c/fields/Nombre_de_pagers__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_pagers__c</fullName>
    <defaultValue>IF( $RecordType.Name =&apos;AIP&apos;, 1,0 )</defaultValue>
    <label>Nombre de pagers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>