force-app/main/default/objects/Foyer_paneliste__c/fields/Nombre_de_points_credites_fid__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_points_credites_fid__c</fullName>
    <label>Nombre de points crédités</label>
    <summarizedField>Fidelisation__c.Points_credites__c</summarizedField>
    <summaryFilterItems>
        <field>Fidelisation__c.Statut_de_commande__c</field>
        <operation>notEqual</operation>
        <value>Annulée</value>
    </summaryFilterItems>
    <summaryForeignKey>Fidelisation__c.Foyer_paneliste__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>