force-app/main/default/objects/Foyer_paneliste__c/fields/Nombre_de_set_meters__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_set_meters__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de set meters</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>