force-app/main/default/objects/Foyer_paneliste__c/fields/Numero_de_la_station__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_la_station__c</fullName>
    <label>Numéro de la station</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>