force-app/main/default/objects/Foyer_paneliste__c/fields/Numero_foyer__c.field-meta.xml
<CustomField>
    <fullName>Numero_foyer__c</fullName>
    <label>Numéro foyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>