force-app/main/default/objects/Foyer_paneliste__c/fields/Panel_ExtId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>Panel_ExtId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Panel External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>