force-app/main/default/objects/Foyer_paneliste__c/fields/Proposition__c.field-meta.xml
<CustomField>
    <fullName>Proposition__c</fullName>
    <label>Proposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non soumise</fullName>
            </value>
            <value>
                <fullName>Acceptée</fullName>
            </value>
            <value>
                <fullName>Refusée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>