force-app/main/default/objects/Foyer_paneliste__c/fields/Referentiel_Panel__c.field-meta.xml
<CustomField>
    <fullName>Referentiel_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel Panel</label>
    <referenceTo>Referentiel_Panel__c</referenceTo>
    <relationshipLabel>Foyers panélistes (Référentiel Panel)</relationshipLabel>
    <relationshipName>Foyers_pan_listes</relationshipName>
    <type>Lookup</type>
</CustomField>