force-app/main/default/objects/Foyer_paneliste__c/fields/Resultat_du_traitement__c.field-meta.xml
<CustomField>
    <fullName>Resultat_du_traitement__c</fullName>
    <label>Résultat du traitement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>OK</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>KO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Indéterminé</label>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>fournir</fullName>
                <isActive>false</isActive>
                <label>fournir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>