force-app/main/default/objects/Foyer_paneliste__c/fields/Resultat_du_traitement_d_audience__c.field-meta.xml
<CustomField>
    <fullName>Resultat_du_traitement_d_audience__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Résultat du traitement d&apos;audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>