force-app/main/default/objects/Foyer_paneliste__c/fields/Routeur_MMAT__c.field-meta.xml
<CustomField>
    <fullName>Routeur_MMAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Routeur Mediamat</label>
    <type>Checkbox</type>
</CustomField>