force-app/main/default/objects/Foyer_paneliste__c/fields/Solde_de_points_fid__c.field-meta.xml
<CustomField>
    <fullName>Solde_de_points_fid__c</fullName>
    <formula>Nombre_de_points_credites_fid__c - Nombre_de_points_debites_fid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solde de points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>